--- a/todo
+++ b/todo
@@ -1,8 +1,10 @@
-# todo de redenumit var sau alti termeni in engleza
+$ todo de redenumit var sau alti termeni in engleza
 
 #todo de pus testele in functie de butoane ca sa nu avem failuri nejustificate
 
 #todo de generat raport de testare
+ASDFGHUYGUGYUGEQyjdykdykdrkdrkdrk
+G
 
 # todo de pus poze la butoane
 
